--- a/app/scss/_template.scss
+++ b/app/scss/_template.scss
@@ -2,7 +2,12 @@
 * {
   padding: 0px;
   margin: 0px;
+  box-sizing: border-box;
+  font-family: "Montserrat";
+  font-weight: bold;
+  color: #2d3a4b;
 }
+
 
 ul, li {
   margin-block-start: 0;
@@ -25,6 +30,14 @@ html {
   -webkit-box-sizing: inherit;
   -moz-box-sizing: inherit;
   box-sizing: inherit;
+}
+
+p {
+  display: block;
+  margin-block-start: 0px;
+  margin-block-end: 0px;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
 }
 
 .row:before,
