--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -1,157 +1,853 @@
-@import 'template';
-@import 'mixins';
+@import "template";
+@import "mixins";
+@import "../js/slick/slick.css";
+@import "../js/slick/slick-theme.css";
 
-$navyblue : #2d3a4b;
+$navyblue: #2d3a4b;
+$lightyellow: #ffe115;
+$linecolor: #d1d5db;
+$lightgray: #999999;
+$desc-font: "Playfair Display";
 
-* {
-  box-sizing: border-box;
-  font-family: "Montserrat";
-  font-weight: bold;
+//Animations
+@keyframes appearLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-200%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+} 
+
+.reveal-animation {
+  &.in-view {
+    animation: appearLeft 2s forwards;
+  }
+}
+//Animations END
+
+.hide{
+  display: none;
 }
 
+//Class Wrappers for Sections
+.wrapper {
+  width: 100%;
+  padding: 55px 19.5%;
+  display: flex;
+  @include desktop-S {
+    padding: 55px 15%;
+  }
+  @include mobile-M {
+    padding: 55px 10%;
+  }
+  @include mobile-SS {
+    padding: 55px 5%;
+  }
+  &.head {
+    min-height: 140px;
+    justify-content: space-between;
+    align-items: center;
+    @include mobile-L {
+      padding: 20px 10%;
+      min-height: 60px;
+      align-items: flex-start;
+      justify-content: flex-start;
+    } 
+    nav {
+      flex-basis: 60%;
+      @include desktop-S {
+        flex-basis: 70%;
+      }
+      @include mobile-L {
+        width: 100%;
+      }
+    }
+    @include mobile-L {
+      flex-direction: column;
+    }
+  }
+  &.featured {
+    padding: 0;
+    min-height: 1100px;
+    @include desktop-L {
+      min-height: 850px;
+    }
+    
+    @include desktop-S {
+      min-height: 670px;
+    }
+    @include mobile-L {
+      min-height: 440px;
+    }
+    @include mobile-M {
+      min-height: 350px;
+    }
+    @include mobile-S {
+      min-height: 270px;
+    }
+  }
+  &.arrival {
+    padding: 0;
+    min-height: 1035px;
+    text-align: center;
+    flex-direction: column;
+    @include desktop-L {
+      min-height: 800px;
+    }
+  }
+  &.popular {
+    min-height: 850px;
+    flex-direction: column;
+    margin-top: 90px;
+  }
+  &.knowledge {
+    background-color: #f7f7f7;
+    min-height: 805px;
+    flex-direction: column;
+  }
+  &.opinion {
+    justify-content: flex-end;
+    min-height: 533px;
+    padding-bottom: 0px;
+    &.start {
+      animation: fadeBounce 2s forwards;
+    }
+    @include mobile-L {
+      min-height: 450px;
+    }
+    @include mobile-S {
+      padding-top: 0;
+      min-height: 450px;
+    }
+  }
+  &.about {
+    flex-direction: column;
+    min-height: 455px;
+    border-top: 1px solid $linecolor;
+    justify-content: center;
+  }
+  &.newsletter {
+    justify-content: center;
+    align-items: center; 
+    background-color: #131920;
+    flex-direction: column;
+    padding: 55px 29.5%; 
+    @include desktop-S {
+      padding: 55px 24.5%;
+    }
+    
+    @include mobile-M {
+      padding: 55px 10%;
+    }
+    @include mobile-SS {
+      padding: 55px 5%;
+    }
+  }
+  &.footer {
+    background-color: #171e27;
+    justify-content: space-between;
+  }
+}
+
+//Class Header for Sections
+.header {
+  &.container {
+    align-items: center;
+    align-self: center;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 80%;
+    &.about {
+      width: 100%;
+    }
+    &.news {
+      width: 100%;
+    }
+  }
+  &.head {
+    font-size: 2em;
+    letter-spacing: 0.2em;
+    margin-bottom: 30px;
+    text-transform: uppercase;
+    &.news {
+      color: #fff;
+    }
+  }
+  &.desc {
+    font-family: $desc-font;
+    font-weight: normal;
+    width: 80%;
+    @include mobile-M {
+      width: 100%;
+    }
+    &.about {
+      width: 90%;
+    }
+    &.news {
+      width: 100%;
+      color: #666666;
+      font-weight: normal;
+    }
+  }
+}
+
+//Class Hover for Sections
+.hover {
+  opacity: 0;
+  flex-direction: column;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  transition: opacity 0.3s ease-in;
+
+  &.search {
+    background-color: rgba(45, 58, 75, 0.81) !important;
+    border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    height: 80px;
+    justify-content: center;
+    width: 90px;
+
+    object {
+      width:1.3em;
+      height:1.28em;
+    }
+  }
+}
 
 //Header Styling
-.wrapper {
-    width: 100%;
-
-    &.head {
-      min-height: 140px;
-    }
-
-    &.arrival {
-      min-height: 100%;
-      position: relative;
-    }
+.nav-links {
+  width: 100%;
+  display: block;
+  @include mobile-M {
+    display: none;
+  }
 }
-
-.content {
-  padding: 55px 375px;
-
-  &.head {
+.nav {
+  &.logo {
+    font-size: 3em;
+    height: 49px;
+    @include desktop-S {
+      height: 35px;
+      margin-bottom: 5px;
+    }
+    
+    @include mobile-M {
+      height: 25px;
+    } 
+    .st0 {
+      fill: #2d3a4b;
+    }
+    .st3 {
+      fill: #ffffff;
+    }
+    .st4 {
+      fill: #fde428;
+    }
+  }
+  &.toggle {
     display: flex;
     justify-content: space-between;
-    color: $navyblue;
+    width: 100%;
+    flex-basis: 30%;
+    .menu-toggle{
+      display: none;
+      visibility: hidden;
+      @include mobile-M {
+        display: block;
+        visibility: visible;
+      }
+    }
   }
-
-  &.arrival {
-    display: absolute;
-    height: 1030px;
-    z-index: 10;
+  &.menu {
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    @include mobile-S {
+      font-size: 1.5em;
+      flex-wrap: wrap;
+      margin-left: 10px;
+      &.sub {
+        flex-direction: row;
+        width: 150%;
+        margin-left: 0;
+      }
+    }
+    a {
+      text-decoration: none;
+      text-transform: uppercase;
+      letter-spacing: 0.2em;
+      @include desktop-S {
+        font-size: 0.8em;
+      }
+      object {
+        pointer-events: none;
+      }
+    }
   }
-}
-
-
-.logo {
-  height: 49px;
-  font-size: 3em;
-}
-
-.nav-bar {
-  display: flex;
-  flex-wrap: nowrap;
-  list-style: none;
-  align-items: center;
-}
-
-.nav-item {
-  font-size: 1em;
-  margin-right: 70px;
-  .icon {
-    margin-right: 17px;
+  &.sub {
+    flex-basis: 15%;
+    justify-content: space-between;
+  }
+  &.item {
+    font-size: 1em;
+    @include mobile-S {
+      flex-basis: 50%;
+    }
+    @include mobile-M {
+      font-size: 0.5em;
+    }
   }
 }
 //Header Styling END
 
-.arrival-background {
-  position: absolute;
-  z-index: 1;
-  width: 100%;
-  height: 862px;
-  background-color: #ffe115;
-}
-
-.card-image{
-  position: absolute;
-  z-index: 2;
-  width: 1078px;
-  height: 1025px;
-  right: 9%;
-  top: 200px;
-}
-
-.card-headers {
-  display: flex;
-  flex-direction: column;
-  margin-top: 100px;
-}
-
-.card {
-  font-family: 'Montserrat';
-  color: #fff;
-  font-weight: bold;
-  z-index: 3;
-  &.desc{
-    font-family: 'Playfair Display';
-    font-size: 1em;
+//Featured Item Styling
+.featured {
+  &.content{
+    padding: 55px 19.5%;
+    height: 100%;
+    z-index: 10;
+    
+  @include desktop-S {
+    padding: 55px 15%;
   }
-  &.price{
-    font-family: "Montserrat";
-    color: #2d3a4b;
-    font-size: 5em;
-    sup {
-      font-size: 0.5em;
+  
+  @include mobile-M {
+    padding: 55px 10%;
+  }
+  @include mobile-S{
+    padding: 30px 10%;
+  }
+  }
+  &.background {
+    background-color: $lightyellow;
+    height: 862px;
+    position: absolute;
+    width: 100%;
+    z-index: 1;
+    @include desktop-L {
+      height: 600px;
+    }
+    @include mobile-L {
+      height: 380px;
+    }
+    @include mobile-M {
+      height: 300px;
+    }
+    @include mobile-S {
+      height: 240px;
+    }
+    @include mobile-SS {
+      height: 220px;
     }
   }
-  &.title{
-    font-family: "Montserrat";
-    font-size: 8em;
+  &.image {
+    position: absolute;
+    margin-left: 250px;
+    top: 200px;
+    width: 1025px;
+    z-index: 2;
+    @include desktop-L {
+      width: 922px;
+      top: 60px;
+      margin-left: 110px;
+    }
+    @include desktop-S {
+      width: 666px;
+      top: 100px;
+      margin-left: 130px;
+    }
+    @include mobile-L {
+      width: 410px;
+      top: 80px;
+      margin-left: 100px;
+    }
+    @include mobile-M {
+      width: 307px;
+      margin-left: 100px;
+      top: 70px;
+    }
+    @include mobile-S {
+      width: 230px;
+    }
+    @include mobile-SS {
+      width: 180px;
+    }
   }
-  &.link {
+  &.headers {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    height: 53px;
-    background-color: $navyblue;
-    text-align: center;
-    font-size: 1em;
-    width: 212px;
+    margin-top: 100px;
+    @include desktop-L {
+      margin-top: 50px;
+    }
+    @include mobile-L {
+      margin-top: 0;
+    }
   }
-  &.arrows {
-    margin-top: 50px;
-    user-select: none;
+  &.card {
+    color: #fff;
+    font-weight: bold;
+    z-index: 3;
+    &.desc {
+      font-family: $desc-font;
+      font-size: 1em;
+      
+      @include mobile-M {
+        font-size: 0.8em;
+      }
+    }
+    &.price {
+      color: #2d3a4b;
+      font-size: 5em;
+      @include desktop-L {
+        font-size: 3em;
+      }
+      @include desktop-S {
+        font-size: 3em;
+      }
+      @include mobile-L {
+        font-size: 2em;
+      }
+      
+    @include mobile-M {
+      font-size: 1.5em;
+    }
+      sup {
+        font-size: 0.5em;
+      }
+    }
+    &.title {
+      font-size: 8em;
+      text-transform: uppercase;
+      @include desktop-L {
+        font-size: 5em;
+      }
+      @include desktop-S {
+        font-size: 4em;
+      }
+      @include mobile-L {
+        font-size: 3em;
+      }
+      @include mobile-M {
+        font-size: 2.3em;
+      }
+      @include mobile-SS {
+        font-size: 2em;
+      }
+    }
+    &.link {
+      background-color: $navyblue;
+      display: flex;
+      flex-direction: column;
+      font-size: 1em;
+      height: 53px;
+      justify-content: center;
+      text-align: center;
+      text-transform: uppercase;
+      width: 212px;
+      @include mobile-L {
+        height: 30px;
+        width: 120px;
+        font-size: 1em;
+      }
+      @include mobile-M {
+        font-size: 0.9em;
+        height: 25px;
+        width: 100px;
+      }
+      @include mobile-SS {
+        font-size: 0.9em;
+        width: 90px;
+      }
+    }
+    &.arrows {
+      margin-top: 50px;
+      user-select: none;
 
-    svg {
-      margin-right: 25px;
+      @include mobile-M {
+        margin-top: 15px;
+      }
+      object {
+        margin-right: 25px;
+        @include mobile-M {
+          margin-right: 10px;
+        }
+      }
     }
   }
 }
+//Featured Item Styling END
 
-.card-context {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  bottom: 1;
-  width: 100%;
-  height: 285px;
-  z-index: 3;
-  background-color: #fff;
-  color: $navyblue;
+//New Arrival Styling
 
-  h2 {
-    font-size: 2.5em;
-    letter-spacing: 0.5em;
+.arrival {
+  &.headers {
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    height: 285px;
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+    z-index: 3;
+    h2 {
+      font-size: 2.5em;
+      letter-spacing: 0.5em;
+      text-transform: uppercase;
+    }
+    p {
+      font-weight: normal;
+      padding: 10px 25%;
+      @include mobile-M {
+        padding: 30px 10%;
+      }
+    }
   }
-
-  p {
-    padding: 10px 25%;
+  &.items{
+    display: grid;
+    padding: 0;
+    grid-template-columns: repeat(4, 1fr);
+    width: 100%;
+    text-align: center;
+    @include mobile-M {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+  &.item {
+    border: 1px solid #d1d5db;
+    justify-content: center;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    img {
+      height: 100%;
+      width: 100%;
+    }
+    &:hover {
+      .arrival.hover {
+        opacity: 1;
+      }
+    }
+  }
+  &.title {
+    font-size: 1.5em;
+    letter-spacing: 0.15em;
+    margin-top: -22%;
+    overflow: visible;
+    z-index: 2;
+    @include desktop-L {
+      font-size: 1.2em;
+      letter-spacing: 0.05em;
+      margin-top: -80px;
+    }
+    @include mobile-L {
+      font-size: 1em;
+      margin-top: -60px;
+    }
+    @include mobile-M {
+      font-size: 0.9em;
+      margin-top: -60px;
+    }
+  }
+  &.sub {
+    font-family: $desc-font;
+    font-size: 1em;
     font-weight: normal;
+    margin-top: 25px;
+    z-index: 2;
+    @include desktop-L {
+      margin-top: 15px;
+    }
+    @include mobile-L {
+      font-size: 0.8em;
+      margin-top: 5px;
+    }
   }
+  &.hover {
+    background-color: rgba(255, 255, 21, 0.5);
+    &.price {
+      padding: 5%;
+      text-align: right;
+    }
+    &.search {
+      margin-left: 40%;
+      margin-top: 45%;
+    }
+  }
+}
+//New Arrival END
 
+//Popular Products Styling
+.popular {
+  &.carousel {
+    margin-top: 85px;
+    width: 100%;
+  }
+  &.hover {
+    &.search {
+      margin-left: 25%;
+      margin-top: 35%;
+    }
+  }
+  &.item {
+    position: relative;
+    text-align: center;
+    &.image {
+      width: 100%;
+    }
+    &.title {
+      font-size: 1.5em;
+      letter-spacing: 0.1em;
+      text-transform: uppercase;
+      margin-top: 30px;
+    }
+    &.sub {
+      font-family: $desc-font;
+      font-weight: normal;
+      margin-top: 15px;
+    }
+    &.price {
+      margin-top: 25px;
+    }
+    &:hover {
+      .hover {
+        opacity: 1;
+      }
+    }
+  }
+}
+//Slick Stylings
+.slick-slide {
+  margin: 0 30px;
 }
 
+.slick-prev:before,
+.slick-next:before {
+  color: $navyblue;
+}
+//Popular Products Styling END
 
+//Knowledge Share Style
+.knowledge {
+  &.posts {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 85px;
+    @include mobile-M {
+      flex-direction: column;
+    }
+  }
+  &.post {
+    width: 45%;
+    @include mobile-M {
+      width: 100%;
+      margin-bottom: 40px;
+      border-bottom: 1px solid $linecolor;
+    }
+  }
+  &.month {
+    font-size: 1em;
+    font-weight: normal;
+    padding-bottom: 1em;
+  }
+  &.day {
+    font-size: 5.5em;
+    padding-bottom: 0.2em;
+  }
+  &.title {
+    letter-spacing: 0.2em;
+    padding-bottom: 0.8em;
+    text-transform: uppercase;
+  }
+  &.desc {
+    font-family: $desc-font;
+    font-weight: normal;
+    padding-bottom: 1em;
+    width: 70%;
+    @include mobile-M {
+      width: 100%;
+    }
+  }
+  &.author {
+    span {
+      font-weight: normal;
+    }
+  }
+  &.divisor {
+    background-color: #d1d5db;
+    width: 1px;
+  }
+}
+//Knowledge Sharing Style END
 
+//Opinion Style
+.opinion {
+  text-align: right;
+  &.quote {
+    flex-basis: 50%;
+    margin-right: 10%;
+    align-self: center;
+    @include mobile-L {
+      flex-basis: 75%;
+      margin-right: 5%;
+    }
+    @include mobile-S {
+      flex-basis: 100%;
+    }
+    &.symbol {
+      font-size: 5em;
+      color: $lightyellow;
+    }
+    &.desc {
+      font-family: $desc-font;
+      font-weight: normal;
+      margin-left: 10%;
+    }
+    &.author {
+      padding-top: 30px;
+      font-size: 1.5em;
+      text-transform: uppercase;
+      width: 100%;
+    }
+  }
+  &.img {
+    flex-basis: 30%;
+    @include mobile-L {
+      max-width: 230px;
+      max-height: 400px;
+    }
+    @include mobile-S {
+      display: none;
+    }
+  }
+}
+//Opinion Style END
 
+//About Style
+.about {
+  .nav {
+    width: 15%;
+    padding-top: 60px;
+    display: flex;
+    justify-content: space-around;
+    align-self: center;
+    a {
+      fill: #2d3a4b;
+      &:hover {
+        transition: fill 0.1s linear;
+        fill: $lightyellow;
+      }
+    }
+  }
+}
+//About Style END
 
+//Newsletter Style
+.newsletter {
+  .form {
+    padding-top: 50px;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+  }
+  .email {
+    padding: 18px;
+    font-family: $desc-font;
+    height: 54px;
+    flex-basis: 60%;
+  }
+  button {
+    background: none;
+    color: #fff;
+    border: none;
+    border: 1px solid #fff;
+    text-transform: uppercase;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+    flex-basis: 35%;
+  }
+}
+
+.footer {
+  &.title{
+    margin-bottom: 10px;
+    &.logo {
+      font-size: 3em;
+      height: 25px;
+      .st0f {
+        fill: #999999;
+      }
+      .st3f {
+        fill: #171e27;
+      }
+      .st4f {
+        fill: #999999;
+      }
+    }
+  }
+  &.info{
+    display: flex;
+    flex-direction: column;
+    flex-basis: 15%;
+    @include mobile-M {
+      align-self: center;
+    }
+  }
+  &.item{
+    display: flex;
+    line-height: 1.2em;
+    margin-bottom: 20px;
+    object {
+      margin-right: 10px;
+      flex-basis: 3%;
+      height: 12px;
+    }
+    p{
+      flex-basis: 97%;
+      font-weight: normal;
+      font-size: 0.9em;
+      color: #999999;
+    }
+  }
+
+  &.links{
+    flex-basis: 52%;  
+    display: flex;
+    justify-content: space-between;
+    @include mobile-M {
+      margin-left: 10px;
+      flex-direction: column;
+    }
+  }
+  &.section{
+    display: flex;
+    flex-direction: column;
+    ul{
+      list-style: none;
+      li{
+        margin-bottom: 5px;
+      }
+    }
+    h2 {
+      font-size: 1em;
+      color: #fff;
+      margin-bottom: 26px;
+    }
+
+    a{
+      text-decoration: none;
+      font-weight: normal;
+      color: #999999;
+      font-size: 0.9em;
+    }
+  }
+}
