--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1,7 +1,17 @@
 /* Template */
+@import url(../js/slick/slick.css);
+@import url(../js/slick/slick-theme.css);
 * {
   padding: 0px;
   margin: 0px;
+  box-sizing: border-box;
+  font-family: "Montserrat";
+  font-weight: bold;
+  color: #2d3a4b;
+}
+
+body {
+  width: 100%;
 }
 
 ul, li {
@@ -27,6 +37,14 @@ html {
   box-sizing: inherit;
 }
 
+p {
+  display: block;
+  margin-block-start: 0px;
+  margin-block-end: 0px;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+
 .row:before,
 .row:after,
 .group:before,
@@ -46,152 +64,1096 @@ html {
 }
 
 /* Template End */
-* {
-  box-sizing: border-box;
-  font-family: "Montserrat";
-  font-weight: bold;
+@keyframes appearLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-200%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.reveal-animation.in-view {
+  animation: appearLeft 2s forwards;
+}
+
+.hide {
+  display: none;
 }
 
 .wrapper {
   width: 100%;
+  padding: 55px 19.5%;
+  display: flex;
+}
+
+@media only screen and (max-width: 1280px) {
+  .wrapper {
+    padding: 55px 15%;
+  }
+}
+
+@media only screen and (max-width: 606px) {
+  .wrapper {
+    padding: 55px 10%;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .wrapper {
+    padding: 55px 5%;
+  }
 }
 
 .wrapper.head {
   min-height: 140px;
-}
-
-.wrapper.arrival {
-  min-height: 100%;
-  position: relative;
-}
-
-.content {
-  padding: 55px 375px;
-}
-
-.content.head {
-  display: flex;
   justify-content: space-between;
-  color: #2d3a4b;
-}
-
-.content.arrival {
-  display: absolute;
-  height: 1030px;
-  z-index: 10;
-}
-
-.logo {
-  height: 49px;
-  font-size: 3em;
-}
-
-.nav-bar {
-  display: flex;
-  flex-wrap: nowrap;
-  list-style: none;
   align-items: center;
 }
 
-.nav-item {
-  font-size: 1em;
-  margin-right: 70px;
+@media only screen and (max-width: 955px) {
+  .wrapper.head {
+    padding: 20px 10%;
+    min-height: 60px;
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
 }
 
-.nav-item .icon {
-  margin-right: 17px;
+.wrapper.head nav {
+  flex-basis: 60%;
 }
 
-.arrival-background {
-  position: absolute;
-  z-index: 1;
+@media only screen and (max-width: 1280px) {
+  .wrapper.head nav {
+    flex-basis: 70%;
+  }
+}
+
+@media only screen and (max-width: 955px) {
+  .wrapper.head nav {
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 955px) {
+  .wrapper.head {
+    flex-direction: column;
+  }
+}
+
+.wrapper.featured {
+  padding: 0;
+  min-height: 1100px;
+}
+
+@media only screen and (max-width: 1685px) {
+  .wrapper.featured {
+    min-height: 850px;
+  }
+}
+
+@media only screen and (max-width: 1280px) {
+  .wrapper.featured {
+    min-height: 670px;
+  }
+}
+
+@media only screen and (max-width: 955px) {
+  .wrapper.featured {
+    min-height: 440px;
+  }
+}
+
+@media only screen and (max-width: 606px) {
+  .wrapper.featured {
+    min-height: 350px;
+  }
+}
+
+@media only screen and (max-width: 425px) {
+  .wrapper.featured {
+    min-height: 270px;
+  }
+}
+
+.wrapper.arrival {
+  padding: 0;
+  min-height: 1035px;
+  text-align: center;
+  flex-direction: column;
+}
+
+@media only screen and (max-width: 1685px) {
+  .wrapper.arrival {
+    min-height: 800px;
+  }
+}
+
+.wrapper.popular {
+  min-height: 850px;
+  flex-direction: column;
+  margin-top: 90px;
+}
+
+.wrapper.knowledge {
+  background-color: #f7f7f7;
+  min-height: 805px;
+  flex-direction: column;
+}
+
+.wrapper.opinion {
+  justify-content: flex-end;
+  min-height: 533px;
+  padding-bottom: 0px;
+}
+
+.wrapper.opinion.start {
+  animation: fadeBounce 2s forwards;
+}
+
+@media only screen and (max-width: 955px) {
+  .wrapper.opinion {
+    min-height: 450px;
+  }
+}
+
+@media only screen and (max-width: 425px) {
+  .wrapper.opinion {
+    padding-top: 0;
+    min-height: 450px;
+  }
+}
+
+.wrapper.about {
+  flex-direction: column;
+  min-height: 455px;
+  border-top: 1px solid #d1d5db;
+  justify-content: center;
+}
+
+.wrapper.newsletter {
+  justify-content: center;
+  align-items: center;
+  background-color: #131920;
+  flex-direction: column;
+  padding: 55px 29.5%;
+}
+
+@media only screen and (max-width: 1280px) {
+  .wrapper.newsletter {
+    padding: 55px 24.5%;
+  }
+}
+
+@media only screen and (max-width: 606px) {
+  .wrapper.newsletter {
+    padding: 55px 10%;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .wrapper.newsletter {
+    padding: 55px 5%;
+  }
+}
+
+.wrapper.footer {
+  background-color: #171e27;
+  justify-content: space-between;
+}
+
+.header.container {
+  align-items: center;
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  width: 80%;
+}
+
+.header.container.about {
   width: 100%;
-  height: 862px;
-  background-color: #ffe115;
 }
 
-.card-image {
+.header.container.news {
+  width: 100%;
+}
+
+.header.head {
+  font-size: 2em;
+  letter-spacing: 0.2em;
+  margin-bottom: 30px;
+  text-transform: uppercase;
+}
+
+.header.head.news {
+  color: #fff;
+}
+
+.header.desc {
+  font-family: "Playfair Display";
+  font-weight: normal;
+  width: 80%;
+}
+
+@media only screen and (max-width: 606px) {
+  .header.desc {
+    width: 100%;
+  }
+}
+
+.header.desc.about {
+  width: 90%;
+}
+
+.header.desc.news {
+  width: 100%;
+  color: #666666;
+  font-weight: normal;
+}
+
+.hover {
+  opacity: 0;
+  flex-direction: column;
+  height: 100%;
   position: absolute;
-  z-index: 2;
-  width: 1078px;
-  height: 1025px;
-  right: 9%;
-  top: 200px;
+  top: 0;
+  width: 100%;
+  transition: opacity 0.3s ease-in;
 }
 
-.card-headers {
+.hover.search {
+  background-color: rgba(45, 58, 75, 0.81) !important;
+  border-radius: 50%;
+  display: flex;
+  flex-direction: column;
+  height: 80px;
+  justify-content: center;
+  width: 90px;
+}
+
+.hover.search object {
+  width: 1.3em;
+  height: 1.28em;
+}
+
+.nav-links {
+  width: 100%;
+  display: block;
+}
+
+@media only screen and (max-width: 606px) {
+  .nav-links {
+    display: none;
+  }
+}
+
+.nav.logo {
+  font-size: 3em;
+  height: 49px;
+}
+
+@media only screen and (max-width: 1280px) {
+  .nav.logo {
+    height: 35px;
+    margin-bottom: 5px;
+  }
+}
+
+@media only screen and (max-width: 606px) {
+  .nav.logo {
+    height: 25px;
+  }
+}
+
+.nav.logo .st0 {
+  fill: #2d3a4b;
+}
+
+.nav.logo .st3 {
+  fill: #ffffff;
+}
+
+.nav.logo .st4 {
+  fill: #fde428;
+}
+
+.nav.toggle {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  flex-basis: 30%;
+}
+
+.nav.toggle .menu-toggle {
+  display: none;
+  visibility: hidden;
+}
+
+@media only screen and (max-width: 606px) {
+  .nav.toggle .menu-toggle {
+    display: block;
+    visibility: visible;
+  }
+}
+
+.nav.menu {
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+}
+
+@media only screen and (max-width: 425px) {
+  .nav.menu {
+    font-size: 1.5em;
+    flex-wrap: wrap;
+    margin-left: 10px;
+  }
+  .nav.menu.sub {
+    flex-direction: row;
+    width: 150%;
+    margin-left: 0;
+  }
+}
+
+.nav.menu a {
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
+}
+
+@media only screen and (max-width: 1280px) {
+  .nav.menu a {
+    font-size: 0.8em;
+  }
+}
+
+.nav.menu a object {
+  pointer-events: none;
+}
+
+.nav.sub {
+  flex-basis: 15%;
+  justify-content: space-between;
+}
+
+.nav.item {
+  font-size: 1em;
+}
+
+@media only screen and (max-width: 425px) {
+  .nav.item {
+    flex-basis: 50%;
+  }
+}
+
+@media only screen and (max-width: 606px) {
+  .nav.item {
+    font-size: 0.5em;
+  }
+}
+
+.featured.content {
+  padding: 55px 19.5%;
+  height: 100%;
+  z-index: 10;
+}
+
+@media only screen and (max-width: 1280px) {
+  .featured.content {
+    padding: 55px 15%;
+  }
+}
+
+@media only screen and (max-width: 606px) {
+  .featured.content {
+    padding: 55px 10%;
+  }
+}
+
+@media only screen and (max-width: 425px) {
+  .featured.content {
+    padding: 30px 10%;
+  }
+}
+
+.featured.background {
+  background-color: #ffe115;
+  height: 862px;
+  position: absolute;
+  width: 100%;
+  z-index: 1;
+}
+
+@media only screen and (max-width: 1685px) {
+  .featured.background {
+    height: 600px;
+  }
+}
+
+@media only screen and (max-width: 955px) {
+  .featured.background {
+    height: 380px;
+  }
+}
+
+@media only screen and (max-width: 606px) {
+  .featured.background {
+    height: 300px;
+  }
+}
+
+@media only screen and (max-width: 425px) {
+  .featured.background {
+    height: 240px;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .featured.background {
+    height: 220px;
+  }
+}
+
+.featured.image {
+  position: absolute;
+  margin-left: 250px;
+  top: 200px;
+  width: 1025px;
+  z-index: 2;
+}
+
+@media only screen and (max-width: 1685px) {
+  .featured.image {
+    width: 922px;
+    top: 60px;
+    margin-left: 110px;
+  }
+}
+
+@media only screen and (max-width: 1280px) {
+  .featured.image {
+    width: 666px;
+    top: 100px;
+    margin-left: 130px;
+  }
+}
+
+@media only screen and (max-width: 955px) {
+  .featured.image {
+    width: 410px;
+    top: 80px;
+    margin-left: 100px;
+  }
+}
+
+@media only screen and (max-width: 606px) {
+  .featured.image {
+    width: 307px;
+    margin-left: 100px;
+    top: 70px;
+  }
+}
+
+@media only screen and (max-width: 425px) {
+  .featured.image {
+    width: 230px;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .featured.image {
+    width: 180px;
+  }
+}
+
+.featured.headers {
   display: flex;
   flex-direction: column;
   margin-top: 100px;
 }
 
-.card {
-  font-family: 'Montserrat';
+@media only screen and (max-width: 1685px) {
+  .featured.headers {
+    margin-top: 50px;
+  }
+}
+
+@media only screen and (max-width: 955px) {
+  .featured.headers {
+    margin-top: 0;
+  }
+}
+
+.featured.card {
   color: #fff;
   font-weight: bold;
   z-index: 3;
 }
 
-.card.desc {
-  font-family: 'Playfair Display';
+.featured.card.desc {
+  font-family: "Playfair Display";
   font-size: 1em;
 }
 
-.card.price {
-  font-family: "Montserrat";
+@media only screen and (max-width: 606px) {
+  .featured.card.desc {
+    font-size: 0.8em;
+  }
+}
+
+.featured.card.price {
   color: #2d3a4b;
   font-size: 5em;
 }
 
-.card.price sup {
+@media only screen and (max-width: 1685px) {
+  .featured.card.price {
+    font-size: 3em;
+  }
+}
+
+@media only screen and (max-width: 1280px) {
+  .featured.card.price {
+    font-size: 3em;
+  }
+}
+
+@media only screen and (max-width: 955px) {
+  .featured.card.price {
+    font-size: 2em;
+  }
+}
+
+@media only screen and (max-width: 606px) {
+  .featured.card.price {
+    font-size: 1.5em;
+  }
+}
+
+.featured.card.price sup {
   font-size: 0.5em;
 }
 
-.card.title {
-  font-family: "Montserrat";
+.featured.card.title {
   font-size: 8em;
+  text-transform: uppercase;
 }
 
-.card.link {
+@media only screen and (max-width: 1685px) {
+  .featured.card.title {
+    font-size: 5em;
+  }
+}
+
+@media only screen and (max-width: 1280px) {
+  .featured.card.title {
+    font-size: 4em;
+  }
+}
+
+@media only screen and (max-width: 955px) {
+  .featured.card.title {
+    font-size: 3em;
+  }
+}
+
+@media only screen and (max-width: 606px) {
+  .featured.card.title {
+    font-size: 2.3em;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .featured.card.title {
+    font-size: 2em;
+  }
+}
+
+.featured.card.link {
+  background-color: #2d3a4b;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  height: 53px;
-  background-color: #2d3a4b;
-  text-align: center;
   font-size: 1em;
+  height: 53px;
+  justify-content: center;
+  text-align: center;
+  text-transform: uppercase;
   width: 212px;
 }
 
-.card.arrows {
+@media only screen and (max-width: 955px) {
+  .featured.card.link {
+    height: 30px;
+    width: 120px;
+    font-size: 1em;
+  }
+}
+
+@media only screen and (max-width: 606px) {
+  .featured.card.link {
+    font-size: 0.9em;
+    height: 25px;
+    width: 100px;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .featured.card.link {
+    font-size: 0.9em;
+    width: 90px;
+  }
+}
+
+.featured.card.arrows {
   margin-top: 50px;
   user-select: none;
 }
 
-.card.arrows svg {
+@media only screen and (max-width: 606px) {
+  .featured.card.arrows {
+    margin-top: 15px;
+  }
+}
+
+.featured.card.arrows object {
   margin-right: 25px;
 }
 
-.card-context {
-  position: absolute;
+@media only screen and (max-width: 606px) {
+  .featured.card.arrows object {
+    margin-right: 10px;
+  }
+}
+
+.arrival.headers {
+  background-color: #fff;
   display: flex;
   flex-direction: column;
+  height: 285px;
   justify-content: center;
   text-align: center;
-  bottom: 1;
   width: 100%;
-  height: 285px;
   z-index: 3;
-  background-color: #fff;
+}
+
+.arrival.headers h2 {
+  font-size: 2.5em;
+  letter-spacing: 0.5em;
+  text-transform: uppercase;
+}
+
+.arrival.headers p {
+  font-weight: normal;
+  padding: 10px 25%;
+}
+
+@media only screen and (max-width: 606px) {
+  .arrival.headers p {
+    padding: 30px 10%;
+  }
+}
+
+.arrival.items {
+  display: grid;
+  padding: 0;
+  grid-template-columns: repeat(4, 1fr);
+  width: 100%;
+  text-align: center;
+}
+
+@media only screen and (max-width: 606px) {
+  .arrival.items {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+.arrival.item {
+  border: 1px solid #d1d5db;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.arrival.item img {
+  height: 100%;
+  width: 100%;
+}
+
+.arrival.item:hover .arrival.hover {
+  opacity: 1;
+}
+
+.arrival.title {
+  font-size: 1.5em;
+  letter-spacing: 0.15em;
+  margin-top: -22%;
+  overflow: visible;
+  z-index: 2;
+}
+
+@media only screen and (max-width: 1685px) {
+  .arrival.title {
+    font-size: 1.2em;
+    letter-spacing: 0.05em;
+    margin-top: -80px;
+  }
+}
+
+@media only screen and (max-width: 955px) {
+  .arrival.title {
+    font-size: 1em;
+    margin-top: -60px;
+  }
+}
+
+@media only screen and (max-width: 606px) {
+  .arrival.title {
+    font-size: 0.9em;
+    margin-top: -60px;
+  }
+}
+
+.arrival.sub {
+  font-family: "Playfair Display";
+  font-size: 1em;
+  font-weight: normal;
+  margin-top: 25px;
+  z-index: 2;
+}
+
+@media only screen and (max-width: 1685px) {
+  .arrival.sub {
+    margin-top: 15px;
+  }
+}
+
+@media only screen and (max-width: 955px) {
+  .arrival.sub {
+    font-size: 0.8em;
+    margin-top: 5px;
+  }
+}
+
+.arrival.hover {
+  background-color: rgba(255, 255, 21, 0.5);
+}
+
+.arrival.hover.price {
+  padding: 5%;
+  text-align: right;
+}
+
+.arrival.hover.search {
+  margin-left: 40%;
+  margin-top: 45%;
+}
+
+.popular.carousel {
+  margin-top: 85px;
+  width: 100%;
+}
+
+.popular.hover.search {
+  margin-left: 25%;
+  margin-top: 35%;
+}
+
+.popular.item {
+  position: relative;
+  text-align: center;
+}
+
+.popular.item.image {
+  width: 100%;
+}
+
+.popular.item.title {
+  font-size: 1.5em;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  margin-top: 30px;
+}
+
+.popular.item.sub {
+  font-family: "Playfair Display";
+  font-weight: normal;
+  margin-top: 15px;
+}
+
+.popular.item.price {
+  margin-top: 25px;
+}
+
+.popular.item:hover .hover {
+  opacity: 1;
+}
+
+.slick-slide {
+  margin: 0 30px;
+}
+
+.slick-prev:before,
+.slick-next:before {
   color: #2d3a4b;
 }
 
-.card-context h2 {
-  font-size: 2.5em;
-  letter-spacing: 0.5em;
+.knowledge.posts {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 85px;
 }
 
-.card-context p {
-  padding: 10px 25%;
+@media only screen and (max-width: 606px) {
+  .knowledge.posts {
+    flex-direction: column;
+  }
+}
+
+.knowledge.post {
+  width: 45%;
+}
+
+@media only screen and (max-width: 606px) {
+  .knowledge.post {
+    width: 100%;
+    margin-bottom: 40px;
+    border-bottom: 1px solid #d1d5db;
+  }
+}
+
+.knowledge.month {
+  font-size: 1em;
   font-weight: normal;
+  padding-bottom: 1em;
+}
+
+.knowledge.day {
+  font-size: 5.5em;
+  padding-bottom: 0.2em;
+}
+
+.knowledge.title {
+  letter-spacing: 0.2em;
+  padding-bottom: 0.8em;
+  text-transform: uppercase;
+}
+
+.knowledge.desc {
+  font-family: "Playfair Display";
+  font-weight: normal;
+  padding-bottom: 1em;
+  width: 70%;
+}
+
+@media only screen and (max-width: 606px) {
+  .knowledge.desc {
+    width: 100%;
+  }
+}
+
+.knowledge.author span {
+  font-weight: normal;
+}
+
+.knowledge.divisor {
+  background-color: #d1d5db;
+  width: 1px;
+}
+
+.opinion {
+  text-align: right;
+}
+
+.opinion.quote {
+  flex-basis: 50%;
+  margin-right: 10%;
+  align-self: center;
+}
+
+@media only screen and (max-width: 955px) {
+  .opinion.quote {
+    flex-basis: 75%;
+    margin-right: 5%;
+  }
+}
+
+@media only screen and (max-width: 425px) {
+  .opinion.quote {
+    flex-basis: 100%;
+  }
+}
+
+.opinion.quote.symbol {
+  font-size: 5em;
+  color: #ffe115;
+}
+
+.opinion.quote.desc {
+  font-family: "Playfair Display";
+  font-weight: normal;
+  margin-left: 10%;
+}
+
+.opinion.quote.author {
+  padding-top: 30px;
+  font-size: 1.5em;
+  text-transform: uppercase;
+  width: 100%;
+}
+
+.opinion.img {
+  flex-basis: 30%;
+}
+
+@media only screen and (max-width: 955px) {
+  .opinion.img {
+    max-width: 230px;
+    max-height: 400px;
+  }
+}
+
+@media only screen and (max-width: 425px) {
+  .opinion.img {
+    display: none;
+  }
+}
+
+.about .nav {
+  width: 15%;
+  padding-top: 60px;
+  display: flex;
+  justify-content: space-around;
+  align-self: center;
+}
+
+.about .nav a {
+  fill: #2d3a4b;
+}
+
+.about .nav a:hover {
+  transition: fill 0.1s linear;
+  fill: #ffe115;
+}
+
+.newsletter .form {
+  padding-top: 50px;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.newsletter .email {
+  padding: 18px;
+  font-family: "Playfair Display";
+  height: 54px;
+  flex-basis: 60%;
+}
+
+.newsletter button {
+  background: none;
+  color: #fff;
+  border: none;
+  border: 1px solid #fff;
+  text-transform: uppercase;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+  flex-basis: 35%;
+}
+
+.footer.title {
+  margin-bottom: 10px;
+}
+
+.footer.title.logo {
+  font-size: 3em;
+  height: 25px;
+}
+
+.footer.title.logo .st0f {
+  fill: #999999;
+}
+
+.footer.title.logo .st3f {
+  fill: #171e27;
+}
+
+.footer.title.logo .st4f {
+  fill: #999999;
+}
+
+.footer.info {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 15%;
+}
+
+@media only screen and (max-width: 606px) {
+  .footer.info {
+    align-self: center;
+  }
+}
+
+.footer.item {
+  display: flex;
+  line-height: 1.2em;
+  margin-bottom: 20px;
+}
+
+.footer.item object {
+  margin-right: 10px;
+  flex-basis: 3%;
+  height: 12px;
+}
+
+.footer.item p {
+  flex-basis: 97%;
+  font-weight: normal;
+  font-size: 0.9em;
+  color: #999999;
+}
+
+.footer.links {
+  flex-basis: 52%;
+  display: flex;
+  justify-content: space-between;
+}
+
+@media only screen and (max-width: 606px) {
+  .footer.links {
+    margin-left: 10px;
+    flex-direction: column;
+  }
+}
+
+.footer.section {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer.section ul {
+  list-style: none;
+}
+
+.footer.section ul li {
+  margin-bottom: 5px;
+}
+
+.footer.section h2 {
+  font-size: 1em;
+  color: #fff;
+  margin-bottom: 26px;
+}
+
+.footer.section a {
+  text-decoration: none;
+  font-weight: normal;
+  color: #999999;
+  font-size: 0.9em;
 }
